post-review fixes
Fixed crop growth
Prevent aspect ratio adjustment making overlays too small in one dimension.
Remove old alt-drag code.
Make sure newly added overlay gets new controls
Restore preventing language name tooltip for small boxes that are not overlays
Fix problem suppressing image controls for ctrl/alt keys
Improve naming and comments in target content code

--- a/src/BloomBrowserUI/bookEdit/css/editMode.less
+++ b/src/BloomBrowserUI/bookEdit/css/editMode.less
@@ -144,8 +144,7 @@ body {
     }
 }
 // The editing buttons are hidden when this class is added (currently by motion and comic tools)
-.bloom-imageContainer.bloom-hideImageButtons,
-.bloom-imageContainer.ui-suppressImageButtons {
+.bloom-imageContainer.bloom-hideImageButtons {
     > .imageButton,
     > .miniButton {
         display: none;
